Current version of locks, but change CI to JDK 25